--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                             <ul class="menu-list">
                                 <li>
                                     <div class="menu-item">
-                                        <a href="" style="color: #e84a16;">Trang chủ</a>
+                                        <a href="./home.html" style="color: #e84a16;">Trang chủ</a>
                                     </div>
                                 </li>
                                 <li>
