--- a/service.html
+++ b/service.html
@@ -112,7 +112,7 @@
                             <ul class="menu-list">
                                 <li>
                                     <div class="menu-item">
-                                        <a href="" style="color: #e84a16;">Trang chủ</a>
+                                        <a href="./home.html" style="color: #e84a16;">Trang chủ</a>
                                     </div>
                                 </li>
                                 <li>
