--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                             <ul class="menu-list">
                                 <li>
                                     <div class="menu-item">
-                                        <a href="./home.html" style="color: #e84a16;">Trang chủ</a>
+                                        <a href="./home.html">Trang chủ</a>
                                     </div>
                                 </li>
                                 <li>
@@ -133,7 +133,7 @@
                                 </li>
                                 <li>
                                     <div class="menu-item">
-                                        <a href="./contact.html">Liên hệ</a>
+                                        <a href="./contact.html" style="color: #e84a16;">Liên hệ</a>
                                     </div>
                                 </li>
                             </ul>
