--- a/introduce.html
+++ b/introduce.html
@@ -112,12 +112,12 @@
                             <ul class="menu-list">
                                 <li>
                                     <div class="menu-item">
-                                        <a href="./home.html" style="color: #e84a16;">Trang chủ</a>
+                                        <a href="./home.html">Trang chủ</a>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="menu-item">
-                                        <a href="./introduce.html">Giới thiệu</a>
+                                        <a href="./introduce.html" style="color: #e84a16;">Giới thiệu</a>
                                     </div>
                                 </li>
                                 <li>
