--- a/news.html
+++ b/news.html
@@ -113,7 +113,7 @@
                             <ul class="menu-list">
                                 <li>
                                     <div class="menu-item">
-                                        <a href="./home.html" style="color: #e84a16;">Trang chủ</a>
+                                        <a href="./home.html">Trang chủ</a>
                                     </div>
                                 </li>
                                 <li>
@@ -128,7 +128,7 @@
                                 </li>
                                 <li>
                                     <div class="menu-item">
-                                        <a href="./news.html">Tin tức</a>
+                                        <a href="./news.html" style="color: #e84a16;">Tin tức</a>
                                     </div>
                                 </li>
                                 <li>
